# deinterf

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
deinterf/: __init__.py  attitude_feature.py  compensation.py  compensator.py  metrics.py  tolles_lawson.py  utils.py
deinterf/attitude/: estimator.py
deinterf/compensator/tmi/linear/: __init__.py  _term.py  kernel.py  terms.py  tolles_lawson.py
deinterf/data/: __init__.py  _data.py  _group.py
deinterf/foundation/: __init__.py  _term.py  sensors.py
deinterf/metrics/: fom.py
deinterf/utils/: expanded_tl.py  filter.py  transform.py
deinterf/utils/data_ioc/: __init__.py  _data.py  _data_ndarray.py
example/: main_compensator.py
examples/: classic_tmi.py  compensate_tmi.py  compensate_tmi_extended.py  compensate_tmi_extended_16+84+31.py  extended_cable_current_tmi.py  extended_load_vibration_tmi.py  replace_direction_cosine_source_tmi.py  test_data.csv
