[project]
name = "deinterf"
version = "0.0.1"
description = "Compensation for magnetic interference from flight platform in aeromagnetic data"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "pandas", "loguru", "scikit-learn"]
authors = [{ name = "dorian", email = "dorian.li@outlook.com" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
