# Project Metadata
[project]
name = "deinterf"
version = "0.1.0"
description = "Aeromagnetic Data Compensation for Magnetic Interference"
readme = "README.md"

# Requirements
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.4", 
    "scipy>=1.11.1", 
    "pandas>=2.0.3", 
    "loguru>=0.7.0", 
    "scikit-learn>=1.3.0",
    "typing-extensions"
]

# Author Info
authors = [ { name = "dorian", email = "dorian.li@outlook.com" } ]

# Project Classifiers
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

# Build System
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
